# oxipng-py

./: .gitignore  Cargo.toml  README.md  oxipng_py.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
