[package]
name = "oxipng_py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxipng_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
oxipng = { git = "https://github.com/oxipng/oxipng" }
indexmap = "2.13.0"